package com.directi.training.lsp.exercise_refactored;

public interface Quackable {
    public void quack();
}
