package com.directi.training.lsp.exercise_refactored;

public interface Swimmable {
    public void swim();
}
